fix: commits not showing up

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,7 +6,6 @@
 @layer base{
     body{
         @apply bg-[#141414] text-white !scrollbar-thin !scrollbar-track-transparent !scrollbar-thumb-red-600;
-        font-family:'Netflix Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
     }
 }
 
